More fixes and polish